--- a/InitialProject/InitialProject/View/Guest2/TourRequestsStatistic.xaml
+++ b/InitialProject/InitialProject/View/Guest2/TourRequestsStatistic.xaml
@@ -5,18 +5,96 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.View.Guest2"
         mc:Ignorable="d"
-        Title="TourRequestsStatistic" Height="450" Width="800">
+        Title="TourRequestsStatistic" Height="700" Width="1300"
+        WindowStartupLocation="CenterScreen">
     <Grid>
-        <RadioButton x:Name="AllTimeRB" Content="All Time" HorizontalAlignment="Left" Margin="249,20,0,0" VerticalAlignment="Top" Checked="AllTimeRB_Checked"/>
-        <RadioButton x:Name="PerYearRB" Content="Per Year" HorizontalAlignment="Left" Margin="434,20,0,0" VerticalAlignment="Top" Checked="PerYearRB_Checked" />
-        <ComboBox x:Name="CB" HorizontalAlignment="Left" Margin="322,63,0,0" VerticalAlignment="Top" Width="120" Loaded="FillComboBox"/>
-        <Label Content="Select Year" HorizontalAlignment="Left" Margin="229,61,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="ShowStatisticButton" Content="Show Statistic" HorizontalAlignment="Left" Margin="340,108,0,0" VerticalAlignment="Top" Width="84" Height="34" RenderTransformOrigin="0.166,0.996" Click="ShowStatisticButton_Click"/>
-        <TextBox x:Name="txt1" HorizontalAlignment="Left" Margin="95,304,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Accepted-" HorizontalAlignment="Left" Margin="23,300,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txt2" HorizontalAlignment="Left" Margin="95,346,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Declined" HorizontalAlignment="Left" Margin="23,342,0,0" VerticalAlignment="Top"/>
-        <Button Content="Exit" HorizontalAlignment="Left" Margin="727,360,0,0" VerticalAlignment="Top" Click="Exit" Width="47" Height="33"/>
+        <RadioButton x:Name="AllTimeRB" Content="All Time" FontSize="16" HorizontalAlignment="Left" Margin="534,158,0,0" VerticalAlignment="Top" Checked="AllTimeRB_Checked"/>
+        <RadioButton x:Name="PerYearRB" Content="Per Year" FontSize="16" HorizontalAlignment="Left" Margin="719,158,0,0" VerticalAlignment="Top" Checked="PerYearRB_Checked" />
+        <ComboBox x:Name="CB" HorizontalAlignment="Left" Margin="644,199,0,0" VerticalAlignment="Top" Width="120" Loaded="FillComboBox"/>
+        <Label Content="Select Year" HorizontalAlignment="Left" FontSize="16" Margin="551,197,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="ShowStatisticButton" Content="Show Statistic" FontSize="16" HorizontalAlignment="Center" Margin="0,519,0,0" VerticalAlignment="Top" Width="130" Height="44" RenderTransformOrigin="0.166,0.996" Click="ShowStatisticButton_Click"/>
+        <TextBox x:Name="txt1" HorizontalAlignment="Left" Margin="478,591,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Accepted:" HorizontalAlignment="Left" FontSize="18" Margin="385,583,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txt2" HorizontalAlignment="Left" Margin="807,591,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Declined:" HorizontalAlignment="Left" FontSize="18" Margin="719,583,0,0" VerticalAlignment="Top"/>
+        <Button Content="Exit" HorizontalAlignment="Left" Margin="1215,626,0,0" VerticalAlignment="Top" Click="Exit" Width="47" Height="33"/>
+        <Rectangle HorizontalAlignment="Center" Height="254" Stroke="Black" VerticalAlignment="Top" Width="604" Margin="0,244,0,0"/>
+        <ToolBar Grid.Row="0" Height="39" VerticalAlignment="Top">
+            <Button Click="OpenGuestOverview">
+                <StackPanel Orientation="Horizontal" Width="53">
 
+                    <TextBlock Text="Home" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="50" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenGuest2Form">
+                <StackPanel Orientation="Horizontal" Width="53">
+
+                    <TextBlock Text="Search" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="50" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenGuestOnTour"  Width="69">
+                <StackPanel Orientation="Horizontal">
+
+                    <TextBlock Text="My tours" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="59" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenVouchers">
+                <StackPanel Orientation="Horizontal" Width="67">
+
+                    <TextBlock Text="Vouchers" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="60" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenTourReviews" Width="80">
+                <StackPanel Orientation="Horizontal" Width="67">
+
+                    <TextBlock Text="Past Tours" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="62" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenCreateTourRequest" Width="110">
+                <StackPanel Orientation="Horizontal" Width="103">
+
+                    <TextBlock Text="Create Requests" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="92" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+
+            <Button Click="OpenComplexTourRequests" Width="70">
+                <StackPanel Orientation="Horizontal" Width="67">
+
+                    <TextBlock Text="Complex" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="55" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenAllTourRequests" Width="85">
+                <StackPanel Orientation="Horizontal" Width="81">
+
+                    <TextBlock Text="All Requests" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="79" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenTourRequestsStatistic" Width="54">
+                <StackPanel Orientation="Horizontal" Width="57">
+                    <TextBlock Text="Statistic" FontSize="14" Width="50" />
+                </StackPanel>
+            </Button>
+
+            <Separator/>
+            <Button Click="OpenNotifications" Width="98">
+                <StackPanel Orientation="Horizontal" Width="86">
+
+                    <TextBlock Text="Notifications" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="82" />
+                </StackPanel>
+            </Button>
+        </ToolBar>
+        <Label Content="Statistic" HorizontalAlignment="Center" Margin="0,72,0,0" FontSize="45" VerticalAlignment="Top"/>
+        <ComboBox x:Name="CB_Copy" HorizontalAlignment="Left" Margin="187,246,0,0" VerticalAlignment="Top" Width="120" Loaded="FillComboBox"/>
+        <Label Content="Select language" HorizontalAlignment="Left" FontSize="16" Margin="44,240,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="CB_Copy1" HorizontalAlignment="Left" Margin="187,282,0,0" VerticalAlignment="Top" Width="120" Loaded="FillComboBox"/>
+        <Label Content="Select location" HorizontalAlignment="Left" FontSize="16" Margin="48,276,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
