--- a/InitialProject/InitialProject/View/Guest2/GuestOnTour.xaml
+++ b/InitialProject/InitialProject/View/Guest2/GuestOnTour.xaml
@@ -5,14 +5,101 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.View.Guest2"
         mc:Ignorable="d"
-        Title="GuestOnTour" Height="450" Width="800">
-    <Grid>
-        <DataGrid x:Name="DataPanel" HorizontalAlignment="Center" Height="89" VerticalAlignment="Center" Width="458" Loaded="LoadData"/>
-        <Label Content="Select a tour to start." HorizontalAlignment="Left" Height="28" Margin="171,131,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Confirm arrival" HorizontalAlignment="Center" Height="29" Margin="0,395,0,0" VerticalAlignment="Top" Click="ConfirmArrival" Width="96" RenderTransformOrigin="1.708,0.439"/>
-        <Button Content="Exit" HorizontalAlignment="Left" Height="27" Margin="687,367,0,0" VerticalAlignment="Top" Click="Exit" Width="61"/>
-        <DataGrid x:Name="KeyPoints" Margin="268,309,268,48"/>
-        <Button Content="Show Tour" HorizontalAlignment="Center" Height="26" Margin="0,267,0,0" VerticalAlignment="Top" Width="68" Click="Button_Click"/>
-        <Label Content="Active Tours" HorizontalAlignment="Center" FontSize="30" Margin="0,65,0,0" VerticalAlignment="Top"/>
+        Title="GuestOnTour" Height="700" Width="1300"
+        WindowStartupLocation="CenterScreen">
+    <Grid Margin="0,0,0,-6">
+        <DataGrid x:Name="DataPanel" HorizontalAlignment="Center" Height="151" VerticalAlignment="Top" Width="1144" Loaded="LoadData" Margin="0,173,0,0"/>
+        <Label Content="Select a tour to start:" HorizontalAlignment="Left" FontSize="18" Height="30" Margin="78,138,0,0" VerticalAlignment="Top" Width="186"/>
+        <Button Content="Confirm arrival" HorizontalAlignment="Center" FontSize="18" Height="38" Margin="0,524,0,0" VerticalAlignment="Top" Click="ConfirmArrival" Width="134" RenderTransformOrigin="1.708,0.439"/>
+        <Button Content="Exit" HorizontalAlignment="Left" Height="27" Margin="1221,635,0,0" VerticalAlignment="Top" Click="Exit" Width="50"/>
+        <DataGrid x:Name="KeyPoints" Margin="78,423,852,73"/>
+        <Button Content="Show Tour" HorizontalAlignment="Center" Height="36" FontSize="18" Margin="0,345,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click"/>
+        <Label Content="Active Tours" HorizontalAlignment="Center" FontSize="45" Margin="0,72,0,0" VerticalAlignment="Top"/>
+        <Button Content="Show report" HorizontalAlignment="Left" FontSize="18" Margin="1026,524,0,0" VerticalAlignment="Top" Height="38" Width="108" Click="ShowReport"/>
+        <Label Content="Select a keypoint:" HorizontalAlignment="Left" FontSize="18" Margin="80,384,0,0" VerticalAlignment="Top"/>
+        <Label Content="Click 'Confirm arrival' if you are" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Top" Height="43" Width="240" Margin="532,446,0,0"/>
+        <Label Content=" sure you selected right keypoint." FontSize="16" HorizontalAlignment="Left" Margin="522,467,0,0" VerticalAlignment="Top" Height="34" Width="250" RenderTransformOrigin="0.5,0.5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="0"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="0"/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Label Content="If you would like to see a report" HorizontalAlignment="Left" FontSize="16" Margin="962,446,0,0" VerticalAlignment="Top"/>
+        <Label Content="on all your booked tours, click here." HorizontalAlignment="Left" FontSize="16" Margin="948,467,0,0" VerticalAlignment="Top"/>
+        <ToolBar Grid.Row="0" Height="47" VerticalAlignment="Top">
+            <Button Click="OpenGuestOverview">
+                <StackPanel Orientation="Horizontal" Width="53">
+
+                    <TextBlock Text="Home" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="50" />
+                </StackPanel>
+            </Button>
+            <Button Click="OpenGuest2Form">
+                <StackPanel Orientation="Horizontal" Width="53">
+
+                    <TextBlock Text="Search" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="50" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenGuestOnTour"  Width="69">
+                <StackPanel Orientation="Horizontal">
+
+                    <TextBlock Text="My tours" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="59" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenVouchers">
+                <StackPanel Orientation="Horizontal" Width="67">
+
+                    <TextBlock Text="Vouchers" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="60" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenTourReviews" Width="80">
+                <StackPanel Orientation="Horizontal" Width="67">
+
+                    <TextBlock Text="Past Tours" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="62" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenCreateTourRequest" Width="110">
+                <StackPanel Orientation="Horizontal" Width="103">
+
+                    <TextBlock Text="Create Requests" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="92" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+
+            <Button Click="OpenComplexTourRequests" Width="70">
+                <StackPanel Orientation="Horizontal" Width="67">
+
+                    <TextBlock Text="Complex" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="55" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenAllTourRequests" Width="85">
+                <StackPanel Orientation="Horizontal" Width="81">
+
+                    <TextBlock Text="All Requests" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="79" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenTourRequestsStatistic" Width="54">
+                <StackPanel Orientation="Horizontal" Width="57">
+                    <TextBlock Text="Statistic" FontSize="14" Width="50" />
+                </StackPanel>
+            </Button>
+
+            <Separator/>
+            <Button Click="OpenNotifications" Width="98">
+                <StackPanel Orientation="Horizontal" Width="86">
+
+                    <TextBlock Text="Notifications" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="82" />
+                </StackPanel>
+            </Button>
+        </ToolBar>
     </Grid>
 </Window>
