--- a/InitialProject/InitialProject/View/SignInForm.xaml
+++ b/InitialProject/InitialProject/View/SignInForm.xaml
@@ -14,7 +14,7 @@
             <RowDefinition Height="60"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="1" Grid.Column="0" Width="300" Height="100">
+        <Grid Grid.Row="1" Grid.Column="0" Width="300" Height="100" Margin="75,50,75,0">
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
@@ -29,8 +29,9 @@
             <TextBox Grid.Row="0" Text="{Binding Path=Username, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Height="25" TextWrapping="Wrap" VerticalAlignment="Center"/>
             <PasswordBox Name="txtPassword" Grid.Row="1" Grid.Column="1" Height="25" VerticalAlignment="Center"/>
         </Grid>
-        
+
         <Button Grid.Row="2" Click="SignIn" Content="Sign in" HorizontalAlignment="Center" VerticalAlignment="Center" Height="20" Width="60"/>
+        <Label Content="TRAVEL AGENCY" FontSize="25" HorizontalAlignment="Left" Margin="120,2,0,0" Grid.Row="1" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
